# hw-xml

./: .gitignore  .travis.yml  Criteria  LICENSE  README.md  TAGS  cabal.project  circle.yml  hw-xml.cabal  package.yaml  packages.list  project.sh  stack.yaml
.circleci/: config.yml  whitelist-dependencies.txt
.github/: FUNDING.yml
.github/workflows/: haskell.yml
app/: Main.hs
app/App/: Commands.hs  Naive.hs  Options.hs  Show.hs  Slow.hs
app/App/Commands/: Count.hs  CreateBlankedXml.hs  CreateBpIndex.hs  CreateIbIndex.hs  CreateIndex.hs  Demo.hs  Query.hs  Types.hs
app/App/XPath/: Parser.hs  Types.hs
bench/: Main.hs
data/: catalog.xml
src/HaskellWorks/Data/: Xml.hs
src/HaskellWorks/Data/Xml/: Blank.hs  CharLike.hs  Conduit.hs  Decode.hs  DecodeError.hs  DecodeResult.hs  Extract.hs  Grammar.hs  Index.hs  Lens.hs  RawDecode.hs  RawValue.hs  Succinct.hs  TagChild.hs  TagData.hs  TagInfo.hs  Token.hs  Type.hs  Value.hs
src/HaskellWorks/Data/Xml/Conduit/: Blank.hs  Blank2.hs  Words.hs
src/HaskellWorks/Data/Xml/Internal/: BalancedParens.hs  Blank.hs  ByteString.hs  List.hs  Show.hs  Tables.hs  ToIbBp64.hs  Words.hs
src/HaskellWorks/Data/Xml/Succinct/: Cursor.hs  Index.hs
src/HaskellWorks/Data/Xml/Succinct/Cursor/: BalancedParens.hs  BlankedXml.hs  Create.hs  CursorType.hs  FromXmlCursor.hs  InterestBits.hs  Internal.hs  Load.hs  MMap.hs  Token.hs  Types.hs
src/HaskellWorks/Data/Xml/Token/: Tokenize.hs  Types.hs
src/HaskellWorks/Data/Xml/Value/: Internal.hs
test/HaskellWorks/Data/Xml/: ExtractSpec.hs  Gen.hs  IndexSpec.hs  RawValueSpec.hs  TypeSpec.hs  ValueSpec.hs
test/HaskellWorks/Data/Xml/Conduit/: Blank2Spec.hs  BlankSpec.hs
test/HaskellWorks/Data/Xml/Internal/: BlankSpec.hs  ByteStringSpec.hs
test/HaskellWorks/Data/Xml/Succinct/: CursorSpec.hs
test/HaskellWorks/Data/Xml/Succinct/Cursor/: BalancedParensSpec.hs  BlankedXmlSpec.hs  InterestBitsSpec.hs
test/HaskellWorks/Data/Xml/Succinct/CursorSpec/: Make.hs
test/HaskellWorks/Data/Xml/Token/: TokenizeSpec.hs
