name:                   hw-xml
version:                0.0.0.1
synopsis:               Conduits for tokenizing streams.
description:            Please see README.md
homepage:               http://github.com/haskell-works/hw-xml#readme
license:                BSD3
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016 John Ky
category:               Data, XML
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.22
data-files:             test/data/sample.xml

executable hw-xml-example
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -msse4.2
  build-depends:        base                          >= 4          && < 5
                      , bytestring
                      , conduit
                      , criterion
                      , hw-bits
                      , hw-conduit
                      , hw-diagnostics
                      , hw-xml
                      , hw-prim                       >= 0.0.2
                      , hw-rankselect
                      , mmap
                      , resourcet
                      , vector
  default-language:     Haskell2010

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Data.Xml
                      , HaskellWorks.Data.Xml.Conduit
                      , HaskellWorks.Data.Xml.Conduit.Blank
                      , HaskellWorks.Data.Xml.Conduit.Words
                      , HaskellWorks.Data.Xml.Extract
                      , HaskellWorks.Data.Xml.Succinct
                      , HaskellWorks.Data.Xml.Succinct.Cursor
                      , HaskellWorks.Data.Xml.Succinct.Cursor.BalancedParens
                      , HaskellWorks.Data.Xml.Succinct.Cursor.BlankedXml
                      , HaskellWorks.Data.Xml.Succinct.Cursor.CursorType
                      , HaskellWorks.Data.Xml.Succinct.Cursor.FromXmlCursor
                      , HaskellWorks.Data.Xml.Succinct.Cursor.InterestBits
                      , HaskellWorks.Data.Xml.Succinct.Cursor.Internal
                      , HaskellWorks.Data.Xml.Succinct.Cursor.Token
                      , HaskellWorks.Data.Xml.Token.Tokenize
                      , HaskellWorks.Data.Xml.Token.Types
                      , HaskellWorks.Data.Xml.Token
                      , HaskellWorks.Data.Xml.Type
                      , HaskellWorks.Data.Xml.Value
  build-depends:        base                          >= 4          && < 5
                      , array
                      , attoparsec
                      , bytestring
                      , conduit
                      , containers
                      , hw-bits
                      , hw-conduit
                      , hw-parser
                      , hw-prim                       >= 0.0.2
                      , hw-rankselect
                      , mono-traversable
                      , resourcet
                      , text
                      , vector
                      , word8

  default-language:     Haskell2010
  ghc-options:          -rtsopts -with-rtsopts=-N -Wall -O2 -Wall -msse4.2

test-suite hw-xml-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        HaskellWorks.Data.Xml.Token.TokenizeSpec
                      , HaskellWorks.Data.Xml.Succinct.CursorSpec
                      , HaskellWorks.Data.Xml.Succinct.Cursor.InterestBitsSpec
  build-depends:        base                          >= 4          && < 5
                      , attoparsec
                      , bytestring
                      , conduit
                      , containers
                      , hspec
                      , hw-bits
                      , hw-conduit
                      , hw-xml
                      , hw-prim                       >= 0.0.2
                      , hw-rankselect
                      , mmap
                      , parsec
                      , QuickCheck
                      , resourcet
                      , transformers
                      , vector
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-works/hw-xml

benchmark bench
    Type: exitcode-stdio-1.0
    HS-Source-Dirs: bench
    Main-Is: Main.hs
    GHC-Options: -O2 -Wall -msse4.2
    Default-Language: Haskell2010
    Build-Depends:      base                          >= 4          && < 5
                      , bytestring
                      , conduit
                      , criterion
                      , hw-bits
                      , hw-conduit
                      , hw-xml
                      , hw-prim                       >= 0.0.2
                      , hw-rankselect
                      , mmap
                      , resourcet
                      , vector
