cabal-version:      2.2

name:               hw-xml
version:            0.1.0.4
synopsis:           Conduits for tokenizing streams.
description:        Conduits for tokenizing streams. Please see README.md
category:           Data, XML, Succinct Data Structures, Data Structures
homepage:           http://github.com/haskell-works/hw-xml#readme
bug-reports:        https://github.com/haskell-works/hw-xml/issues
author:             John Ky,
                    Alexey Raga
maintainer:         alexey.raga@gmail.com
copyright:          2016-2019 John Ky
                  , 2016-2019 Alexey Raga
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md
data-files:
  data/catalog.xml

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-xml

common base                       { build-depends: base                       >= 4.7        && < 5      }

common QuickCheck                 { build-depends: QuickCheck                                           }
common ansi-wl-pprint             { build-depends: ansi-wl-pprint                                       }
common array                      { build-depends: array                                                }
common attoparsec                 { build-depends: attoparsec                                           }
common bytestring                 { build-depends: bytestring                                           }
common cereal                     { build-depends: cereal                                               }
common conduit                    { build-depends: conduit                                              }
common containers                 { build-depends: containers                                           }
common criterion                  { build-depends: criterion                                            }
common deepseq                    { build-depends: deepseq                                              }
common ghc-prim                   { build-depends: ghc-prim                                             }
common hspec                      { build-depends: hspec                                                }
common hw-balancedparens          { build-depends: hw-balancedparens          >= 0.2.0.1                }
common hw-bits                    { build-depends: hw-bits                    >= 0.7.0.2                }
common hw-conduit                 { build-depends: hw-conduit                 >= 0.2.0.2                }
common hw-parser                  { build-depends: hw-parser                                            }
common hw-prim                    { build-depends: hw-prim                    >= 0.4.0.0                }
common hw-rankselect              { build-depends: hw-rankselect              >= 0.10.0.3               }
common hw-rankselect-base         { build-depends: hw-rankselect-base         >= 0.2.0.0                }
common hw-xml                     { build-depends: hw-xml                                               }
common lens                       { build-depends: lens                                                 }
common mmap                       { build-depends: mmap                                                 }
common mtl                        { build-depends: mtl                                                  }
common resourcet                  { build-depends: resourcet                                            }
common transformers               { build-depends: transformers                                         }
common vector                     { build-depends: vector                                               }
common word8                      { build-depends: word8                                                }

common config
  default-language: Haskell2010

library
  import:   base, config
          , ansi-wl-pprint
          , array
          , attoparsec
          , base
          , bytestring
          , cereal
          , conduit
          , containers
          , deepseq
          , ghc-prim
          , hw-balancedparens
          , hw-bits
          , hw-conduit
          , hw-parser
          , hw-prim
          , hw-rankselect
          , hw-rankselect-base
          , lens
          , mtl
          , resourcet
          , transformers
          , vector
          , word8
  exposed-modules:
    HaskellWorks.Data.Xml
    HaskellWorks.Data.Xml.Blank
    HaskellWorks.Data.Xml.CharLike
    HaskellWorks.Data.Xml.Conduit
    HaskellWorks.Data.Xml.Conduit.Blank
    HaskellWorks.Data.Xml.Conduit.Words
    HaskellWorks.Data.Xml.Decode
    HaskellWorks.Data.Xml.DecodeError
    HaskellWorks.Data.Xml.DecodeResult
    HaskellWorks.Data.Xml.Grammar
    HaskellWorks.Data.Xml.Index
    HaskellWorks.Data.Xml.Lens
    HaskellWorks.Data.Xml.Succinct
    HaskellWorks.Data.Xml.Succinct.Cursor
    HaskellWorks.Data.Xml.Succinct.Cursor.BalancedParens
    HaskellWorks.Data.Xml.Succinct.Cursor.BlankedXml
    HaskellWorks.Data.Xml.Succinct.Cursor.InterestBits
    HaskellWorks.Data.Xml.Succinct.Cursor.Internal
    HaskellWorks.Data.Xml.Succinct.Cursor.Token
    HaskellWorks.Data.Xml.Succinct.Index
    HaskellWorks.Data.Xml.RawDecode
    HaskellWorks.Data.Xml.RawValue
    HaskellWorks.Data.Xml.Token.Tokenize
    HaskellWorks.Data.Xml.Token.Types
    HaskellWorks.Data.Xml.Token
    HaskellWorks.Data.Xml.Type
    HaskellWorks.Data.Xml.Value
  other-modules:      Paths_hw_xml
  autogen-modules:    Paths_hw_xml
  hs-source-dirs:     src
  ghc-options:        -Wall -O2 -msse4.2

executable hw-xml-example
  import:   base, config
          , bytestring
          , hw-balancedparens
          , hw-bits
          , hw-prim
          , hw-rankselect
          , hw-xml
          , vector
  main-is:            Main.hs
  other-modules:      Paths_hw_xml
  autogen-modules:    Paths_hw_xml
  hs-source-dirs:     app
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -msse4.2

test-suite hw-xml-test
  import:   base, config
          , QuickCheck
          , attoparsec
          , base
          , bytestring
          , conduit
          , hspec
          , hw-balancedparens
          , hw-bits
          , hw-conduit
          , hw-prim
          , hw-rankselect
          , hw-rankselect-base
          , hw-xml
          , vector
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
  autogen-modules:    Paths_hw_xml
  other-modules:
    HaskellWorks.Data.Xml.Conduit.BlankSpec
    HaskellWorks.Data.Xml.RawValueSpec
    HaskellWorks.Data.Xml.Succinct.Cursor.BalancedParensSpec
    HaskellWorks.Data.Xml.Succinct.Cursor.InterestBitsSpec
    HaskellWorks.Data.Xml.Succinct.CursorSpec
    HaskellWorks.Data.Xml.Token.TokenizeSpec
    HaskellWorks.Data.Xml.TypeSpec
    Paths_hw_xml

benchmark bench
  import:   base, config
          , bytestring
          , conduit
          , criterion
          , hw-balancedparens
          , hw-bits
          , hw-conduit
          , hw-prim
          , hw-xml
          , mmap
          , resourcet
          , vector
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Paths_hw_xml
  autogen-modules:  Paths_hw_xml
  hs-source-dirs:   bench
  ghc-options:      -O2 -Wall -msse4.2

